@@ -125,6 +125,7 @@ operation, such as copying or deleting some files.</label>
     </radio-group>
     <slider name='filer_size_limit' label='Window size limit' min='1' max='100' showvalue='1'>The largest size, as a percentage of the screen size, that the auto-resizer will resize a window to.</slider>
     <spacer/>
+    <toggle name='filer_short_flag_names' label='Short titlebar flags'>Use single letters instead of words for Scanning, All and Thumbs indicators in the titlebar.</toggle>
     <toggle name='filer_unique_windows' label='Unique windows'>If you open a directory and that directory is already displayed in another window, then this option causes the other window to be closed.</toggle>
     <toggle name='bind_new_button_1' label='New window on button 1 (RISC OS style)'>Clicking with mouse button 1 (usually the left button) opens a directory in a new window with this turned on. Clicking with the button-2 (middle) will reuse the current window.</toggle>
     <toggle name='bind_single_click' label='Single-click navigation in filer windows'>Clicking on an item opens it with this on. Hold down Control to select the item instead. If off, clicking once selects an item; double click to open things.</toggle>
