@@ -2,6 +2,10 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+25-Mar-2002
+~~~~~~~~~~~
+New 'Short titlebar flags' option (requested by Andras Mohari).
+
 24-Mar-2002
 ~~~~~~~~~~~
 Fixed problem which allowed the panel to get the input focus (reported by
